--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "mongoose": "^5.9.7",
+    "shortid": "^2.2.15",
     "socket.io": "^2.3.0"
   }
 }
