--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Pitch card game",
   "main": "index.js",
   "scripts": {
+    "start": "node ./index.js",
     "dev": "nodemon ./index.js",
     "heroku-postbuild": "cd pitch-client && npm install && npm run build"
   },
